tests/sema/bad/13_unknown_type.sg
let x:Foo = 1;  // неизвестный тип (если нет typedef Foo)
